Added base suggestions logic
